--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,39 @@
 @font-face {
     font-family:"sabotage" ;
-    src: url(assets/);
+    font-weight: 400;
+    font-style: normal;
+    src: url("assets/sabotage.woff2") format ("woff2");
+    src: url("assets/sabotage.woff") format ("woff");
+}
+
+ @font-face {
+    font-family: "helvetica neue ultra light condensed";
+    font-weight: 100;
+    font-style: normal;
+    src: url("Helvetica\ Neue\ Webfonts/.woff2") format("woff2");
+    src: url("Helvetica\ Neue\ Webfonts/.woff") format ("woff");
+ }
+
+ @font-face {
+    font-family: "helvetica neue thin";
+    font-weight: 300;
+    font-style: normal;
+    src: url('HelveticaNeueLTStd-ThCn.woff2') format('woff2');
+    src: url('HelveticaNeueLTStd-ThCn.woff') format('woff');
+ }
+
+ @font-face {
+    font-family: 'helvetica neue thin';
+    font-weight: 300;
+    font-style: normal;
+    src: url('HelveticaNeueLTStd-Th.Woff2') format('woff2'); 
+    src: url('HelveticaNeueLTStd-Th.Woff') format('woff');
+ }
+@font-face {
+    font-family: 'Helvetica Neue Roman';
+    font-weight: 400;
+    font-style: normal;
+    src: url('HelveticaNeueLTStd-Roman.woff2') format('woff2');
+    src: url('HelveticaNeueLTStd-Roman.woff') format('woff');
+
 }
